sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:13: error: not found: value n
      setValeur(j,getValeur(j-n))
                              ^AlgShellSort:14: error: not found: value n
      j=j-n
          ^